Set openGL playback plugin (if present) as the default for new installs.
(Multi monitor support) always show dialog windows on the gui monitor.
Re-enable audio recording from external sources (Was inadvertantly disabled).
Fix possible problems with layout reloading (regression).
Reset to correct playback position when stop is pressed during / after pause (multitrack),



Version 2.8.7 (29 June 2017)
----------------------------
Remove glad.h dependence on khr.
Prompt for clip name when rendering to new clip.
Fix autolives toy.
Increase default frame size to 1024x768 for new installs.
Allow override of frame size when encoding to ffmpeg / h264 format.
Fix breakage in the threaded progress window.
Updated Ukrainian translation (Yuri).



Version 2.8.6 (24 May 2017)
---------------------------
Remove dependency on (deprecated) GLee.
Show audio as volume levels in Clip Editor.
Performance improvements for multitrack playback.
Ensure that timeline track backgrounds are painted in multitrack (regression).
Properly expand text width in the message info window.
Improve zoom in multitrack (zooms around cursor rather than screen center).
Prevent annyoing focus stealing when mt is backed up in the background.
Fix broken audio fade in/out (regression).
Fix external window capture (regression).
Fix crash in palette conversions.
Fix compilation issues with liblives scripting engine.
Fix for keys being in multitrack fullscreen preview.
Code reformatting and tidying (W.I.P)



Version 2.8.5 (27 April 2017)
-----------------------------
Fix audio loss when inserting without audio in clip editor (regression).
Fix compiler error and warnings for gcc 7 (https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=853520)
Fix regression in mkv_decoder.
Fix compiler warnings for openGL plugin.
Change max seek allowed from 1 second to 2 seconds in avformat decoder.
Update css state selectors for gtk 3.18+
Experimental support for Wayland.
Updated translation to Ukranian (thaks Yuri).


