@@ -1,4 +1,4 @@
-// LiVES - ogg/theora/vorbis to icecast stream engine
+b// LiVES - ogg/theora/vorbis to icecast stream engine
 // (c) G. Finch 2004 - 2011 <salsaman@xs4all.nl,salsaman@gmail.com>
 // released under the GNU GPL 3 or later
 // see file COPYING or www.gnu.org for details
@@ -182,7 +182,7 @@ const int *get_audio_fmts() {
 }
 
 
-const char *get_init_rfx(void) {
+const char *get_init_rfx(int intention) {
   return \
          "<define>\\n\
 |1.7\\n\
