@@ -182,7 +182,7 @@ const int *get_audio_fmts() {
 const char rfx[32768];
 
 
-const char *get_init_rfx(void) {
+const char *get_init_rfx(int intention) {
   char **vdevs = get_vloopback2_devices();
   char devstr[30000];
 
